--- a/style.css
+++ b/style.css
@@ -21,72 +21,150 @@ body {
   box-sizing: border-box;
 
   .logo {
-   
-
     img {
       width: 20%;
       margin-top: 5px;
       margin-left: 40px;
-      
     }
   }
 
-  .topic{
+  .topic {
     display: flex;
     gap: 20px;
     margin-right: 160px;
-    
-    
 
-    span{
-        color: rgb(85, 85, 85);
-        padding: 2px 10px;
-        font-size: 20px;
-        font-weight: bold;
-        border-radius: 20px;
+    span {
+      color: rgb(85, 85, 85);
+      padding: 2px 10px;
+      font-size: 20px;
+      font-weight: bold;
+      border-radius: 20px;
     }
   }
 
-
-  .sppan{
-    
+  .sppan {
     display: flex;
     margin-right: -30px;
-    span{
-       
-        font-size: 15px;
-        font-weight: bold;
-        margin-right: 4px;
-        color: rgb(65, 65, 65);
+    span {
+      font-size: 15px;
+      font-weight: bold;
+      margin-right: 4px;
+      color: rgb(65, 65, 65);
     }
   }
 
-  .logins{
-    
+  .logins {
     display: flex;
     gap: 10px;
     margin-right: 40px;
 
-
-    .globe{
-       
-        color: rgb(70, 70, 70);
-        font-size: 20px;
-        font-weight: 50;
-        margin-top: 10px;
+    .globe {
+      color: rgb(70, 70, 70);
+      font-size: 20px;
+      font-weight: 50;
+      margin-top: 10px;
     }
 
-    .icons{
-        border: 1px solid gray;
-        background-color: rgb(255, 255, 255);
-        border-radius: 50px;
-        align-items: center;
-        padding: 10px 20px;
-        font-size: 30px;
-        font-weight: bold;
-        display: flex;
-        gap: 10px;
-        color: gray;
+    .icons {
+      border: 1px solid gray;
+      background-color: rgb(255, 255, 255);
+      border-radius: 50px;
+      align-items: center;
+      padding: 10px 20px;
+      font-size: 30px;
+      font-weight: bold;
+      display: flex;
+      gap: 10px;
+      color: gray;
+    }
+  }
+}
+
+.navbar-2 {
+  width: 900px;
+  height: 60px;
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  border-radius: 50px;
+  padding: 10px 40px;
+  margin: 20px auto;
+  align-items: center;
+
+  .section-1 {
+    border-radius: 50px;
+    margin: 0;
+    padding: 0;
+    h1 {
+      font-size: 15px;
+      font-weight: 500;
+      margin: 0;
+      padding: 0;
+    }
+    span {
+      color: grey;
+      font-size: 17px;
+    }
+  }
+
+  .section-2 {
+    border-radius: 50px;
+    margin: 0;
+    padding: 0;
+    h1 {
+      font-size: 15px;
+      font-weight: 500;
+      margin: 0;
+      padding: 0;
+    }
+    span {
+      color: grey;
+      font-size: 17px;
+    }
+  }
+
+  .section-3 {
+    border-radius: 50px;
+    margin: 0;
+    padding: 0;
+    h1 {
+      font-size: 15px;
+      font-weight: 500;
+      margin: 0;
+      padding: 0;
+    }
+    span {
+      color: grey;
+      font-size: 17px;
+    }
+  }
+
+  .section-4 {
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    gap: 110px;
+    margin-right: -41px;
+    padding: 5px 20px;
+    h1 {
+      
+      font-size: 15px;
+      font-weight: 500;
+      margin: 0;
+      padding: 0;
+    }
+    span {
+     
+      color: grey;
+      font-size: 17px;
+    }
+    i {
+        background-color: rgb(255, 55, 98);
+        border-radius: 50%;
+        padding: 8px ;
+        color: white;
+       
     }
   }
 }
