--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@ body {
 
 .navbar-1 {
   width: 100%;
+  height: 70px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  gap: 40px;
-  padding-top: 10px;
   box-sizing: border-box;
+  gap: 40px;
+  padding: 10px 0px;
+  align-items: center;
 
   .logo {
     img {
@@ -31,12 +32,12 @@ body {
   .topic {
     display: flex;
     gap: 20px;
-    margin-right: 160px;
+    margin-right: 200px;
 
     span {
       color: rgb(85, 85, 85);
       padding: 2px 10px;
-      font-size: 20px;
+      font-size: 17px;
       font-weight: bold;
       border-radius: 20px;
     }
@@ -88,8 +89,8 @@ body {
   justify-content: space-between;
   box-sizing: border-box;
   border-radius: 50px;
-  padding: 10px 40px;
-  margin: 20px auto;
+  padding: 0px 40px;
+  margin: 5px auto;
   align-items: center;
 
   .section-1 {
@@ -148,23 +149,44 @@ body {
     margin-right: -41px;
     padding: 5px 20px;
     h1 {
-      
       font-size: 15px;
       font-weight: 500;
       margin: 0;
       padding: 0;
     }
     span {
-     
       color: grey;
       font-size: 17px;
     }
     i {
-        background-color: rgb(255, 55, 98);
-        border-radius: 50%;
-        padding: 8px ;
-        color: white;
-       
+      background-color: rgb(255, 55, 98);
+      border-radius: 50%;
+      padding: 8px;
+      color: white;
     }
+  }
+}
+
+.navbar-3 {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  gap: 10px;
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top: 1px solid gray;
+
+  img {
+    width: 25%;
+    margin: 5px 38px;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 13px;
+    color: gray;
+    margin: -5px;
   }
 }
